platform/ai/k8s/integrations/openwebui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-route
  namespace: ai
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openwebui.homelab.internal
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: kube-system
  hostnames:
    - openwebui.homelab.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: open-webui
      port: 80
